adding error factory results implementation